# tailwind-styled-v5

./: .gitignore  .npmrc  .oxlintrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SETUP.md  biome.json  package-lock.json  package.json  tsconfig.base.json
.cache/analyzer-deps/: package-lock.json  package.json
.cache/tailwind-styled/: scanner-cache.json
.github/workflows/: benchmark.yml  build-matrix.yml  compat-matrix.yml  plugin-registry-test.yml  publish-alpha.yml  publish-benchmark.yml  release-candidate-gate.yml  rust-parser-regression.yml  scale-benchmark.yml
artifacts/: pr5-gap-check.json  scale-summary.json  transform-output.js
artifacts/route-css/: _manifest.json  global.classes.json
artifacts/scale/: massive-smoke.json  massive-top.json  massive-topN.json
bindings/: README.md
bindings/c/: example.c  tailwind.h
bindings/csharp/: Tailwind.cs
bindings/go/: tailwind.go
bindings/java/: TailwindCompiler.java
bindings/php/: tailwind.php
bindings/python/: tailwind.py
bindings/ruby/: tailwind.rb
bindings/swift/: tailwind.swift
bindings/zig/: tailwind.zig
docs/: api-reference.md  architecture.md  dependency-matrix.md  getting-started.md  plugin-registry.md  studio-desktop.md
docs/api/: analyzer.md  cli.md  core.md  engine.md  scanner.md  (+2 more)
native/: Cargo.toml  index.mjs  tailwind_styled_parser.node
native/.cargo/: config.toml
native/src/: lib.rs  oxc_parser.rs  scan_cache.rs  watcher.rs
plans/: compiler-v5-upgrade-plan.md
scripts/: benchmark-engine.mjs  lint.mjs  native-tools.mjs  setup.mjs  test-fallback.mjs
(+154 files in other folders)
