[package]
name = "tailwind_styled_parser"
version = "5.0.0"
edition = "2021"
description = "Native Rust engine for tailwind-styled-v5"

[lib]
# cdylib  → .node file for Node.js N-API
# staticlib → optional, for C ABI consumers (bindings/)
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
# Regex engine — used for class tokenisation, tw detection, RSC analysis
regex = "1"
# Once-cell for lazy static regex compilation (avoid recompiling on every call)
once_cell = "1"
dashmap = "6.1.0"
notify = "6"
oxc_parser = "0.1.3"
oxc_allocator = "0.1.3"
oxc_ast = "0.1.3"
oxc_span = "0.1.3"

[build-dependencies]
napi-build = "1"

[profile.release]
# Optimise for speed, strip debug symbols
opt-level = 3
lto = true
strip = true
